--- a/Mapas Extras - Astrolink.html
+++ b/Mapas Extras - Astrolink.html
@@ -5295,8 +5295,7 @@ habilidades espirituais ou psíquicas para ajudar as pessoas que estão ao
     }
 </script>
 
-<script type="module" src="Mapas%20Extras%20-%20Astrolink_arquivos/birthchartshareable.module.js"></script>                        </div>
-                    </div>
+<script type="module" src="Mapas%20Extras%20-%20Astrolink_arquivos/birthchartshareable.module.js"></script>     
                 </div>
             </div>
         </div>
