--- a/Mapas Extras - Astrolink.html
+++ b/Mapas Extras - Astrolink.html
@@ -1,4 +1,4 @@
-f<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="pt-br" class="mdl-js"><head>
     <title>
         Mapas Extras - Astrolink    </title>
@@ -670,7 +670,7 @@ f<!DOCTYPE html>
 
 
 <header>
-    <div class="container">
+    <div class="container" display="none">
         <div class="row">
             <div class="col-xs-12">
                 <div class="navigation">
@@ -928,7 +928,7 @@ f<!DOCTYPE html>
 </script>        <div class="container">
             <div class="row">
                 <div class="profile-panel">
-                    <div class="profile-navigation">
+                    <div class="profile-navigation"  display="none">
                         <div class="profile-identity">
                             <div class="profile-identity__avatar">
                                 <a href="https://www.astrolink.com.br/perfil.php?id=55396867377">
