--- a/Mapas Extras - Astrolink.html
+++ b/Mapas Extras - Astrolink.html
@@ -3451,7 +3451,7 @@
         
         
         <ul class="chart" style="margin-left:0px;">
-                                <li class="bar capricornio" style="height:360px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Capricórnio &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_earth.png'&gt; &lt;i&gt;Terra Cardinal&lt;/i&gt;">
+                                <li class="bar capricornio" style="width:300px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Capricórnio &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_earth.png'&gt; &lt;i&gt;Terra Cardinal&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 26                                                                                    &nbsp;
