--- a/Mapas Extras - Astrolink.html
+++ b/Mapas Extras - Astrolink.html
@@ -3459,7 +3459,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_10.webp" height="14"><br>CAP                                                                                </div>
                     </li>
-                                        <li class="bar peixes" style="height:294.23076923077px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Peixes &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_water.png'&gt; &lt;i&gt;Água Mutável&lt;/i&gt;">
+                                        <li class="bar peixes" style="width:248.07692307692px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Peixes &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_water.png'&gt; &lt;i&gt;Água Mutável&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 20                                                                                    &nbsp;
@@ -3467,7 +3467,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_12.webp" height="14"><br>PEI                                                                                </div>
                     </li>
-                                        <li class="bar sagitario" style="height:261.34615384615px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Sagitário &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_fire.png'&gt; &lt;i&gt;Fogo Mutável&lt;/i&gt;">
+                                        <li class="bar sagitario" style="width:248.07692307692px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Sagitário &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_fire.png'&gt; &lt;i&gt;Fogo Mutável&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 17                                                                                    &nbsp;
@@ -3475,7 +3475,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_9.webp" height="14"><br>SAG                                                                                </div>
                     </li>
-                                        <li class="bar escorpiao" style="height:228.46153846154px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Escorpião &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_water.png'&gt; &lt;i&gt;Água Fixa&lt;/i&gt;">
+                                        <li class="bar escorpiao" style="width:196.15384615385px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Escorpião &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_water.png'&gt; &lt;i&gt;Água Fixa&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 14                                                                                    &nbsp;
@@ -3483,7 +3483,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_8.webp" height="14"><br>ESC                                                                                </div>
                     </li>
-                                        <li class="bar leao" style="height:107.88461538462px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Leão &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_fire.png'&gt; &lt;i&gt;Fogo Fixo&lt;/i&gt;">
+                                        <li class="bar leao" style="width:196.15384615385px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Leão &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_fire.png'&gt; &lt;i&gt;Fogo Fixo&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 3                                                                                    &nbsp;
@@ -3491,7 +3491,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_5.webp" height="14"><br>LEA                                                                                </div>
                     </li>
-                                        <li class="bar gemeos" style="height:107.88461538462px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Gêmeos &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_air.png'&gt; &lt;i&gt;Ar Mutável&lt;/i&gt;">
+                                        <li class="bar gemeos" style="width:100.96153846154px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Gêmeos &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_air.png'&gt; &lt;i&gt;Ar Mutável&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 3                                                                                    &nbsp;
@@ -3499,7 +3499,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_3.webp" height="14"><br>GEM                                                                                </div>
                     </li>
-                                        <li class="bar virgem" style="height:107.88461538462px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Virgem &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_earth.png'&gt; &lt;i&gt;Terra Mutável&lt;/i&gt;">
+                                        <li class="bar virgem" style="width:100.96153846154px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Virgem &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_earth.png'&gt; &lt;i&gt;Terra Mutável&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 3                                                                                    &nbsp;
@@ -3507,7 +3507,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_6.webp" height="14"><br>VIR                                                                                </div>
                     </li>
-                                        <li class="bar libra" style="height:107.88461538462px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Libra &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_air.png'&gt; &lt;i&gt;Ar Cardinal&lt;/i&gt;">
+                                        <li class="bar libra" style="width:100.96153846154px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Libra &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_air.png'&gt; &lt;i&gt;Ar Cardinal&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 3                                                                                    &nbsp;
@@ -3515,7 +3515,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_7.webp" height="14"><br>LIB                                                                                </div>
                     </li>
-                                        <li class="bar touro" style="height:107.88461538462px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Touro &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_earth.png'&gt; &lt;i&gt;Terra Fixa&lt;/i&gt;">
+                                        <li class="bar touro" style="width:100.96153846154px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Touro &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_earth.png'&gt; &lt;i&gt;Terra Fixa&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 3                                                                                    &nbsp;
@@ -3523,7 +3523,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_2.webp" height="14"><br>TOU                                                                                </div>
                     </li>
-                                        <li class="bar aquario" style="height:107.88461538462px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Aquário &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_air.png'&gt; &lt;i&gt;Ar Fixo&lt;/i&gt;">
+                                        <li class="bar aquario" style="width:100.96153846154px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Aquário &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_air.png'&gt; &lt;i&gt;Ar Fixo&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 3                                                                                    &nbsp;
@@ -3531,7 +3531,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_11.webp" height="14"><br>AQU                                                                                </div>
                     </li>
-                                        <li class="bar aries" style="height:96.923076923077px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Áries &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_fire.png'&gt; &lt;i&gt;Fogo Cardinal&lt;/i&gt;">
+                                        <li class="bar aries" style="width:100.96153846154px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Áries &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_fire.png'&gt; &lt;i&gt;Fogo Cardinal&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 2                                                                                    &nbsp;
@@ -3539,7 +3539,7 @@
                         <div class="skill" style="font-size:12px;">
                                                             <img src="Mapas%20Extras%20-%20Astrolink_arquivos/sig_bar_1.webp" height="14"><br>ARI                                                                                </div>
                     </li>
-                                        <li class="bar cancer" style="height:96.923076923077px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Câncer &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_water.png'&gt; &lt;i&gt;Água Cardinal&lt;/i&gt;">
+                                        <li class="bar cancer" style="width:92.307692307692px" data-toggle="tooltip" data-html="true" title="&lt;strong&gt;Câncer &lt;/strong&gt;&lt;br&gt;&lt;img width='20' src='https://www.astrolink.com.br/img/ico_water.png'&gt; &lt;i&gt;Água Cardinal&lt;/i&gt;">
                         <div class="percent" style="font-size:16px;">
                                                             <span class="flash-white-icon"></span>
                                 2                                                                                    &nbsp;
@@ -3557,7 +3557,7 @@
         </div>
         <br>
         <div class="row">
-            <div class="col-md-6 col-xs-12">
+            <div class="col-md-6 col-xs-12" style="margin-bottom:20px;">
                 <div class="caracteristicas_box_plus">
                     <h3 class="caractersticas_plus_h3"><i class="fa fa-plus-circle" style="color:#09a359;font-size:22px;"></i> Potencial harmônico:</h3><span class="caracteristicas_plus_text read-more-block">Eficiente
  · Organizado · Produtivo · Prudente · Convencional · Persistente · 
